configs/envoy-basic.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: tenants
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: tenant1
                http_filters:
                  - name: awesome.ingress # before envoy.router because order matters!
                    config:
                      uri: htt://tolamu.com
                      cluster: tenant1
                      timeout: 10s
                  - name: envoy.router
                    typed_config: {}
  clusters:
    - name: tenant1
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      ##http2_protocol_options: {}
      load_assignment:
        cluster_name: tenant1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      ##address: host.docker.internal
                      address: localhost
                      port_value: 8081
                      #address: one.cfapps.sap.hana.ondemand.com
                      #port_value: 443
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10001
